--- a/tests/laravel/resources/views/livewire-tag.latte
+++ b/tests/laravel/resources/views/livewire-tag.latte
@@ -1,2 +1,5 @@
 <h1>My component</h1>
 {livewire my-component}
+{livewire $name}
+{livewire my-component foo => bar}
+{livewire my-component, foo => bar}
