Renamed MyComponent to LivewireComponent

--- a/tests/laravel/resources/views/livewire/livewire-tag.latte
+++ b/tests/laravel/resources/views/livewire/livewire-tag.latte
@@ -1,5 +1,6 @@
-<h1>My component</h1>
-{livewire my-component}
+<h1>Livewire component</h1>
+{livewire livewire-component}
 {livewire $name}
-{livewire my-component foo => bar}
-{livewire my-component, foo => bar}
+{livewire livewire-component foo => bar}
+{livewire livewire-component foo: bar}
+{livewire livewire-component, foo => bar}
