--- a/tests/laravel/resources/views/livewire/livewire-tags.latte
+++ b/tests/laravel/resources/views/livewire/livewire-tags.latte
@@ -1,6 +1,6 @@
-<h1>My component multiple</h1>
-{livewire my-component}
-{livewire my-component}
-{livewire my-component}
-{livewire my-component key => lorem}
-{livewire my-component key: ipsum}
+<h1>Livewire component multiple</h1>
+{livewire livewire-component}
+{livewire livewire-component}
+{livewire livewire-component}
+{livewire livewire-component key => lorem}
+{livewire livewire-component key: ipsum}
